# HDP-GPC

./: ClasificacionOlas.ipynb  ClasificacionOlas_ndbc_adrian.ipynb  GPI.py  GPI_HDP.py  GPI_model.py  GPI_models_pytorch.py  GPI_test.py  GP_models_pytorch.py  OptimizerRhoOmega.py  README.md  get_data.py  hdp_gpc_pedestrian_subset_localzip_fixed.py  plot_hdpgpc_clustered_trajectories_layout.py  pyproject.toml  util_plots.py  warping_system.py
NBDC/: 2003.txt  2004.txt  2005.txt  2005b.txt  2006.txt  2007.txt  2008.txt  2009.txt  2010.txt  2011.txt  2012.txt  2013.txt
code_figures/: GP_background.py  GP_prior_posterior.py
data/mitbih/: 100.npy  100_labels.npy  101.npy  102_labels.npy  103.npy  103_labels.npy  104.npy  104_labels.npy  105.npy  105_labels.npy  106.npy  109.npy  111.npy  111_labels.npy  112.npy  113.npy  114.npy  115_labels.npy  117_labels.npy  118.npy  121.npy  123_labels.npy  124.npy  124_labels.npy  202_labels.npy  205.npy  205_labels.npy  209_labels.npy  213_labels.npy  214.npy  215_labels.npy  217_labels.npy  219.npy  220.npy  221.npy  222_labels.npy  223.npy  223_labels.npy  228.npy  231_labels.npy  (+5 more)
docs/: requirements.txt
hdp-gpc/: GPI.py  GPI_HDP.py  GPI_model.py  OptimizerRhoOmega.py  extract_data.py  get_data.py  util_plots.py  warping_system.py
hdpgpc/: GPI_HDP.py  GPI_model.py  GPI_test.py
hdpgpc/docs/: requirements.txt
hdpgpc/hdpgpc/: GPI.py  GPI_HDP.py  GPI_model.py  GPI_models_pytorch.py  HDP-GPC_pyMC.py  OptimizerRhoOmega.py  amtgp_warping_system.py  analysis_all_records.py  analysis_one_record.py  analysis_snr.py  attractor_simulation.py  attractor_welldefined_simulation.py  buoy_utils.py  equilibrium_linear_simulation.py  equilibrium_simulation.py  extract_data.py  get_data.py  nonlinear_simulation.py  plot_cluster_matrix.py  reload_and_plot.py  run_offline_all_records.py  summary_results.py  table_metrics.py  util_plots.py  warp_plots.py  warp_simulation.py  warping_system.py
hdpgpc/ocean/: AccesoBBDD.ipynb  Australia_aph.ipynb  ClasificacionOlas.ipynb  ClasificacionOlas_ndbc.ipynb  ClasificacionOlas_ndbc_comparison.ipynb  ClasificacionOlas_ndbc_directional.ipynb  ClasificacionOlas_wawaves_CLARA.py  ClasificacionOlas_wawaves_CLARA_vs_HDPGPC.py  ClasificacionOlas_wawaves_comparison_1d_occurrence.ipynb  ClasificacionOlas_wawaves_comparison_1d_wass.ipynb  ClasificacionOlas_wawaves_plot_source.ipynb  (+15 more)
tests/: test_offline.py  test_online.py
(+534 files in other folders)
